[tool.poetry]
name = "tassiana"
version = "0.1.0"
description = ""
authors = ["Pricilla Patricia de Aragao <pricillapatricia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
